syntax = "proto3";

package proto;

import "google/protobuf/timestamp.proto";

option go_package = "swrc/proto/pb";

message SnippetTopic {
    string id = 1;
    string title = 2;
    string description = 3;
    string status = 4;
    int64 current_version = 5;
    string best_answer_id = 6;
    string snippet_solution_id = 7;
    string account_id = 8;
    google.protobuf.Timestamp created_at = 9;
};